testcases/negative/timer_safe.js
function delay() {
  setTimeout(() => {
    console.log("safe");
  }, 1000);
}
